fix: height was still stretching, now shrinks with width

--- a/css/style.css
+++ b/css/style.css
@@ -40,7 +40,7 @@ body::-webkit-scrollbar {
 img {
 	max-width: 100% !important;
 	width: 100%;
-	height: 100%;
+	height: auto !important;
 }
 
 #main {
